# linkshield

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CHECKUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.html  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  ruff.toml  start-server.sh  start.sh
.env-examples/: README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  e2e-landing.yml  lockfile.yml  refresh-brand-favicons.yml  refresh-dangerous-domains.yml  refresh-tranco.yml  refresh-watchtower.yml  retrain-ml.yml  security.yml  weekly-benchmark.yml
.planning/: COMPETITIVE-ANALYSIS.md  I18N_ARCHITECTURE.md  PRICING_MATRIX.md  PROJECT.md  QUICKSTART.md  REQUIREMENTS.md  RESEARCH.md  ROADMAP.md  SKILL_LEVELS.md  STATE.md
api/: __init__.py  config.py  main.py  main_minimal.py
api/data/: brand_favicons.json
api/models/: schemas.py
api/routers/: auth.py  breach.py  check.py  credentials.py  doh.py  email.py  email_unsubscribe.py  explainer.py  family.py  feedback.py  mobileconfig.py  org.py  payments.py  phone.py  pricing.py  public.py  referral.py  scam.py  transparency.py  user.py  watchtower.py
api/services/: account_purge.py  analyzer.py  audit_log.py  auth.py  cache.py  circuit_breaker.py  competitor_verdicts.py  doh_gateway.py  domain_validator.py  email.py  email_analyzer.py  email_validator.py  favicon_hash.py  logger.py  (+16 more)
data/: abused_registrars.json  model_meta.json  phishing_model.cbm  phishing_model.onnx  top_100k.json  top_10k.json  typosquat_targets.json
docs/: ARCHITECTURE.md  AUDIT-2026-05-19.md  AUDIT-2026-05-24-deep.md  AUDIT_2026-06-29.md  AUDIT_2026-07-04.md  CWS_SUBMISSION.md  FOUNDER_TASKS.md  I18N-LANDING-STATUS.md  IMPROVEMENT_ROADMAP_2026-06-29.md  OPEN-SOURCE.md  PLAYBOOK_TONIGHT.md  PRIVACY.md  PRIVACY_COPY_AUDIT.md  STORES.md  STRATEGY-2026-06-16.md  USER_ACTION_NOW.md  USER_CHECKLIST.md  USER_PLAYBOOK.md
email-plugin-outlook/: README.md  manifest.xml
extension/: STORE_LISTING.md  manifest.json
extension-firefox/: manifest.json
extension-safari/: manifest.json
landing/: .gitignore  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo  vercel.json
ml/: bloom_compiler.py  train_model.py
mobile/: MOBILE_VPN.md  SHARE_FLOW.md  STORE_LISTING.md  app.json  eas.json  package-lock.json  package.json
scripts/: _inject_landing_sections.py  _smoke_family_crypto.cjs  _smoke_family_crypto_mobile.cjs  _smoke_invite_url_parsing.cjs  build-emails.mjs  build-extensions.sh  build-i18n.py  build-store-artifacts.sh  check-extension-paths.py  check-i18n-parity.py  check-stale-claims.py  create_stripe_prices.py  deploy.sh  dump-openapi.py  eval_fresh_urls.py  generate-api-types.sh  refresh_brand_favicons.py  refresh_dangerous_domains.py  refresh_training_feeds.py  refresh_tranco.py  refresh_watchtower.py  setup-production.sh  sync-addin.cjs  test-api-client-errors.mjs
shared/: design-tokens.json
tests/: benchmark_scoring.py  conftest.py  test_account_lock.py  test_account_purge.py  test_api_integration.py  test_audit_log.py  test_confidence_pct.py  test_credentials_router.py  test_disposable_email_gate.py  test_doh_gateway.py  test_email_analyzer.py  test_email_i18n.py  test_email_rate_limit.py  test_email_render_parity.py  test_email_unsubscribe.py  test_email_unsubscribe_persist.py  test_email_validator.py  test_environment_guards.py  test_eval_fresh_urls.py  test_family.py  test_favicon_hash.py  test_favicon_refresh_drift.py  test_feature_log_gate.py  test_features.py  test_feedback_anonymous.py  test_gdpr_delete.py  test_gdpr_export.py  test_health_deep.py  test_llm_judge.py  test_ml_scorer.py  test_mobileconfig.py  test_payments_checkout.py  test_payments_validators.py  test_payments_webhook.py  test_phone_and_scam.py  test_pricing.py  test_pwned_passwords.py  test_rate_limiting.py  test_redirect_cross_domain.py  test_referral.py  (+13 more)
(+268 files in other folders)
